--- a/src/components/Input.module.scss
+++ b/src/components/Input.module.scss
@@ -51,6 +51,7 @@
 	color: #d3d3d3;
 	padding: 0 8px;
 }
+// aksdjsad
 .input {
 	background-color: #ffffff;
 	width: 200px;
@@ -58,6 +59,7 @@
 	border: #dbb4b4;
 	outline: none;
 	caret-color: rgb(223, 47, 47);
+	transition: all 0.3s;
 	&:hover {
 		cursor: pointer;
 	}
