--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -15,6 +15,7 @@
 	color: #fff;
 	background-color: #0071c2;
 	border: none;
+	transition: 0.3s;
 	&:hover {
 		cursor: pointer;
 		background-color: #69aad8;
